# AscendingGraphics

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
graphics/: Cargo.toml
src/: animated_images.rs  atlas_set.rs  error.rs  font.rs  images.rs  lights.rs  maps.rs  systems.rs  tilesheet.rs
src/animated_images/: pipeline.rs  render.rs
src/atlas_set/: hash.rs  migration.rs
src/font/: pipeline.rs  render.rs  text.rs  uniforms.rs  vertex.rs
src/images/: pipeline.rs  render.rs
src/lights/: pipeline.rs  render.rs
src/maps/: pipeline.rs  render.rs
src/mesh2d/: meshs.rs  pipeline.rs  render.rs
src/shaders/: 2dmeshshader.wgsl  animimageshader.wgsl  imageshader.wgsl  lightshader.wgsl  mapshader.wgsl  rectangle_shader.wgsl  textshader.wgsl
src/systems/: buffer.rs  device.rs  draw_order.rs  ibo_store.rs  instance_buffer.rs  renderer.rs  vbo.rs  vbo_store.rs
src/textures/: texture.rs
src/ui/: pipeline.rs  rectangle.rs  render.rs
