[package]
name = "ascending_graphics"
version = "0.38.0"
authors = ["S.J.R. van Schaik", "Andrew Wheeler <genusistimelord@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.94"
readme = "README.md"
documentation = "https://docs.rs/ascending_graphics"
keywords = ["wgpu", "rendering", "2d", ]
repository = "https://github.com/AscendingCreations/AscendingGraphics"
description = "A graphical rendering library for 2D, using wgpu and winit."
categories = ["game-development", "graphics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rayon", "crate_passthru"]
crate_passthru = []
rayon = ["dep:rayon", "indexmap/rayon"]
static_dx = ["wgpu/static-dxc"]
logging = ["dep:log"]

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
thiserror = "2.0.18"
winit = { version = "0.30.13", features = ["serde"] }
image = { version =  "0.25.10", features = ["serde"] }
guillotiere = { version = "0.7.0", features = ["serialization"] }
serde = { version = "1.0.228", features = ["derive"] }
log = { version = "0.4.29", optional = true }
cosmic-text = { version = "0.18.2", features = ["shape-run-cache"] } #git = "https://github.com/pop-os/cosmic-text"
lru = "0.16.2"
glam = { version = "0.32.1", features = ["bytemuck", "mint", "serde"] }
lyon = "1.0.19"
indexmap = { version = "2.12.1", features = ["serde"]}
slotmap = { version = "1.1.1", features = ["serde"]}
ahash = { version = "0.8.12", features = ["serde"]}
slab = { version = "0.4.12", features = ["serde"]}
rayon = { version = "1.11.0", optional = true }
bumpalo = { version = "3.20.2", features = ["collections"]} 

[dependencies.camera]
package = "ascending_camera"
#path = "../AscendingCamera"
version = "0.8.1"

[dependencies.input]
package = "ascending_input" 
#path = "../AscendingInput"
version = "0.6.1"

[dependencies.time]
package = "ascending_time" 
#path = "../AscendingTime"
version = "0.2.1"

[dependencies.naga]
#git = "https://github.com/gfx-rs/wgpu"
#rev = "76003dc0035d53a474d366dcdf49d2e4d12e921f"
#branch = "cw/vulkan-swapchain"
version = "29.0.0"
features = ["wgsl-in"]

[dependencies.wgpu]
#git = "https://github.com/gfx-rs/wgpu"
#branch = "cw/vulkan-swapchain"
#rev = "061e04b"
#path = "../wgpu-trunk/wgpu"
version = "29.0.0"